Certain passes don't appear in the image editor when loading from a "Cached result". #91638

Closed
opened 2021-09-23 13:46:21 +02:00 by Alaska · 3 comments
Member

System Information
Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version
Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 11:03, hash: e86cf55667, 2.93 LTS, 2.83 LTS,
Worked: NA

Short description of error:
When loading an image from the "Cached result" in the image editor, certain passes don't show up in the image editor. Here's the list of passes that don't show up:

Cycles:

  • Debug Render Time
  • Debug Sample Count
  • Volume Direct
  • Volume Indirect
  • Shadow Catcher
  • Cyptomatte
  • Denoising Data

EEVEE:

  • Volume Direct
  • Bloom
  • Cryptomatte

Exact steps for others to reproduce the error:

  1. Create a scene.
  2. Enable one of the passes from the list above in the View layer Properties editor. I'll use Cryptomatte as an example.
  3. In the Output Properties editor enable Cache Result
  4. Render the scene.
  5. In the image editor select from the top Image -> Open Cached Result
  6. Now when you look at the render passes avaliable in the image editor, some of the passes are missing (Cryptomatte passes in my case)

Here's a video example.
Cached result not loading some passes.mp4

**System Information** Operating system: Linux-5.10.0-8-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 **Blender Version** Broken version: 3.0.0 Alpha, branch: master, commit date: 2021-09-23 11:03, hash: `e86cf55667`, 2.93 LTS, 2.83 LTS, Worked: NA **Short description of error:** When loading an image from the "Cached result" in the image editor, certain passes don't show up in the image editor. Here's the list of passes that don't show up: Cycles: - Debug Render Time - Debug Sample Count - Volume Direct - Volume Indirect - Shadow Catcher - Cyptomatte - Denoising Data EEVEE: - Volume Direct - Bloom - Cryptomatte **Exact steps for others to reproduce the error:** 1. Create a scene. 2. Enable one of the passes from the list above in the `View layer Properties` editor. I'll use `Cryptomatte` as an example. 3. In the `Output Properties` editor enable `Cache Result` 4. Render the scene. 5. In the image editor select from the top `Image -> Open Cached Result` 6. Now when you look at the render passes avaliable in the image editor, some of the passes are missing (`Cryptomatte` passes in my case) Here's a video example. [Cached result not loading some passes.mp4](https://archive.blender.org/developer/F10558844/Cached_result_not_loading_some_passes.mp4)
Author
Member

Added subscriber: @Alaska

Added subscriber: @Alaska

This issue was referenced by 1bdaf0ebec

This issue was referenced by 1bdaf0ebec5bafd6c0b945de49cc74515b93fe1c

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-09-23 20:47:57 +02:00
Sign in to join this conversation.
3 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91638
No description provided.