Fix T91638: image editor Open Cached Render not loading some passes

Previously this was only loading built-in render passes. Now instead of trying
to load the scene render passes, load whatever passes exist in the cache file.